# json-lines-tools

./: CMakeLists.txt  LICENSE  example.jsonl  jsonl2json.cpp
